--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-   <title> </title>
+   <title>Gedragsmotivatie Bureau</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
-   <body style="background-color: #F9F8F9">
-      <article class="cf vh-100-ns">
-         <div class="fl w-100 w-50-ns dt vh-100-ns v-mid-ns ph4">
-            <div class="dtc vh-100-ns v-mid-ns">
-               <h1 class="f3 f1-ns fw5 lh-title mb3 mt4 mt0-ns">Gedragsmotivatie Bureau</h1>
+   <body style="background-color: #F9F8F9" class="avenir">
+	   <center>
+      <article class="cf vh-100-ns dt mw9">
+         <div class="dtc vh-100-ns v-mid-ns">
+            <div class="fl w-100 w-50-ns ph4 tl">
+               <h1 class="f3 f1-ns fw5 lh-title mb3 mt4 mt0-ns">Gedrags&shy;motivatie Bureau</h1>
                <p class="f5 f4-ns fw1">Bij het Gedragsmotivatie Bureau bent u aan het juiste adres 
                voor zowel individuele als groepstraining.</p>
-               <p class="f5 f4-ns fw1">Onze ervaring gaat van middelengebruik in het verkeer tot hangjongeren 
-               in de wijk, van probleemgokkers tot (ex-)gedetineerden.We hebben een stevige reputatie 
+               <p class="f5 f4-ns fw1">We hebben een stevige reputatie 
                in het geven van trainingen binnen de verslavingszorg, het gevangeniswezen, het onderwijs 
-               (zoals rijschoolinstructeurs) en voor medewerkers van zorginstellingen en casino’s. 
-               Een training is altijd maatwerk dat beantwoordt aan de vraag van de opdrachtgever.</p>
+               (zoals rijschool&shy;instructeurs) en voor medewerkers van zorginstellingen en casino's.</p>
                <p class="f5 f4-ns fw1">Het Gedragsmotivatie Bureau is gevestigd in Amsterdam.
                </p>
-               <p class="f5 f4-ns fw5">Contacteer ons voor trainingen op maat via mail
+               <p class="f5 f4-ns fw5">Contacteer ons voor trainingen op maat<br>via mail
                   <a href="mailto:joostbeets1@gmail.com" class="link dim black-60 fw9">info@gedragsmotivatie.nl</a>
-                  of telefoon <a href="tel:+31640396879" class="link dim black-60 fw9">06&#8209;40396879</a> (Joost Beets).
+                  <br>of telefoon <a href="tel:+31640396879" class="link dim black-60 fw9">06&#8209;40396879</a> (Joost Beets).
                </p>
             </div>
-         </div>
-         <div class="fl w-100 w-50-ns tc dt vh-100-ns v-mid-ns ph4">
-            <div class="dtc vh-100-ns v-mid-ns">
+            <div class="fl w-100 w-50-ns tc ph4 dtc">
                <img src="./files/cartoon.png" >
             </div>
          </div>
       </article>
+      </center>
    </body>
 </html>
