--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                <p class="f5 f4-ns fw1">Het Gedragsmotivatie Bureau is gevestigd in Amsterdam.
                </p>
                <p class="f5 f4-ns fw5">Contacteer ons voor trainingen op maat<br>via mail
-                  <a href="mailto:joostbeets1@gmail.com" class="link dim black-60 fw9">info@gedragsmotivatie.nl</a>
+                  <a href="mailto:info@gedragsmotivatie.nl" class="link dim black-60 fw9">info@gedragsmotivatie.nl</a>
                   <br>of telefoon <a href="tel:+31640396879" class="link dim black-60 fw9">06&#8209;40396879</a> (Joost Beets).
                </p>
             </div>
